story.css
/* Universal Selectors */
  * {
    box-sizing: border-box;
  }

  html, body {
    font-family: "Montserrat";
    margin: 0;
    padding: 0;
  }

  body {
    background-color: rgba(26, 50, 73, 0.1);
    height: 100%;
  }

  h1 {
    font-weight: normal;
  }

  p {
    margin: 0 0 25px 0;
  }

  ::-webkit-scrollbar {
    width: 10px;
  }

  ::-webkit-scrollbar-thumb {
    background: rgb(150, 150, 150);
    border-radius: 3px;
  }
/* Universal Selectors End */

/* Nav Portion */
  nav {
    background: #1A3249;
    height: 50px;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1;
  }

  nav a {
    border: solid grey 1px;
    border-radius: 3px;
    color: white;
    padding: 7.5px 15px;
    text-decoration: none;
  }

  nav a:hover {
    background: rgb(68, 109, 150);
  }

  nav ul {
    height: 100%;
    list-style: none;
    margin: 0 auto;
    padding: 0;
    text-align: center;
    width: 49.5%;
  }

  nav li {
    display: inline-block;
    height: 100%;
    margin: 16px 2% 0;
  }

  .brand {
    border: none;
    border-radius: none;
    color: white;
    float: left;
    font-size: 1.5rem;
    margin: 10px 0 0 8.25%;
    padding: 0;
  }

  .brand:hover {
    background: none;
  }
/* End Nav Portion */

/* To Top Button */
  .to-top-button {
    opacity: 0;
    transition: 500ms;
    z-index: 1;
  }

  .to-top-button i {
    bottom: 10px;
    color: rgb(73, 136, 195);
    position: fixed;
    right: 10px;
    text-align: center;
    text-decoration: none;
    z-index: 1;
  }

  .to-top-button i:active {
    color: #722872;
    -webkit-tap-highlight-color: #1A3249;
  }

  .to-top-button i:hover {
    color: #1A3249;
  }

  .to-top-button i {
    font-size: 50px;
  }
/* To Top Button Styles End */

/* Header Area */
  .full-container {
    /* A full width container. Overflow auto so margins don't spill out of parent */
    overflow: hidden;
    color: white;
    margin: 0 0 120px;
  }

  .eighty-container {
    /* Was going to be 66% width... Prefer 85%... */
    margin: 120px auto;
    width: 85%;
  }

  .header {
    text-shadow: 0px 0px 10px rgba(150, 150, 150, 1), 0px 0px 2px rgba(50, 50, 50, 1);
    text-align: center;
    font-size: 4rem;
    margin: 200px 0 0;
  }

  .eighty-container p {
    /* Text shadow is cancelled on p's in .content p */
    text-shadow: 0px 0px 2px rgba(50, 50, 50, 1), 0px 0px 10px rgba(0, 0, 0, 0.5);
    font-size: 2rem;
  }

  .sixty-container {
    margin: 0 auto;
    width: 66%;
  }

  .header-content {
    /* To position the p in the header */
    margin: 60px auto 0;
    text-align: center;
    width: 50%;
  }
/* End Header Area */

/* Content */
  .content {
    /* Outer container for individual content divs */
    align-items: center;
    display: flex;
  }

  .content img {
    border-radius: 3px;
    max-width: 100%;
    box-shadow: 0px 1px 5px 1px rgba(0,0,0,0.25);
  }

  .content video {
    border-radius: 3px;
    max-width: 100%;
    box-shadow: 0px 1px 5px 1px rgba(0,0,0,0.25);
  }

  .content p {
    font-size: 1.5rem;
    text-shadow: none;
  }

  .flex-img {
    /* To go w/in .content w/image and text side by side */
    flex: 2;
    padding: 0 10px;
  }

  .flex-text {
    /* Same as flex-img but for text */
    flex: 1;
    padding: 0 10px;
  }

  .full-width-image {
    /* Div for that glorious full width image */
    margin: 40px 0;
    text-align: center;
  }

  .full-width-image img {
    /* uh yeah... */
    margin: 0;
    width: 100%;
  }

  .gallery-container {
    margin: 120px auto 40px;
    width: 66%;
  }

  .gallery-container img {
    box-shadow: 0px 2px 5px 1px rgba(0,0,0,0.25);
    transition: 200ms;
    width: 100%;
  }

  .gallery-image-shift {
    animation: image-shift;
    animation-duration: 1s;
  }

  @keyframes image-shift {
    0% {opacity: 0;}
    100% {opacity: 1;}
  }

  .four-circles {
    display: flex;
    justify-content: space-around;
    margin: 15px auto;
    max-width: 66%;
  }

  .circle {
    border: 2px solid rgba(26, 50, 73, 0.219);
    border-radius: 50%;
    height: 20px;
    width: 20px;
    transition: 200ms;
  }

  .circle-selected {
    background-color: #1A3249;
  }

  .under-gallery-text {
    text-align: center;
  }
/* Content ENDS */

/* Media Queries Start */
  @media (max-width:800px) {
    ::-webkit-scrollbar {
      width: 0;
    }

    /* HELLA NAV CHANGES */
      .burger-container {
        height: 50px;
        position: fixed;
        right: 8.25%;
        top: 5px;
      }

      .bar1, .bar2, .bar3 {
        width: 35px;
        height: 5px;
        background-color: rgba(255, 255, 255, 0.637);
        margin: 6px 0;
        transition: 0.4s;
      }

      .change .bar1 {
        -webkit-transform: rotate(-45deg) translate(-9px, 6px);
        transform: rotate(-45deg) translate(-9px, 6px);
      }

      .change .bar2 {opacity: 0;}

      .change .bar3 {
        -webkit-transform: rotate(45deg) translate(-8px, -8px);
        transform: rotate(45deg) translate(-8px, -8px);
      }

      nav {
        width: 100%;
      }

      nav ul {
        display: block;
        height: 0;
        margin: 50px 0 0;
        overflow: hidden;
        position: fixed;
        right: 0;
        transition: 330ms;
        width: 100%;
      }

      nav li {
        align-items: center;
        background-color: black;
        border-top: solid white 1px;
        display: flex;
        justify-content: flex-end;
        height: 50px;
        margin: 0;
        text-align: right;
        width: 100%;
      }

      nav a {
        border: none;
        border-radius: 0;
        letter-spacing: 3px;
      }

      .nav-open {
        /* Class applied in js file to show nav */
        height: 150px;
      }
    /* Nav changes end */

    .full-container {
      margin: 0 0 40px;
    }

    .header {
      font-size: 2.75rem;
    }

    .eighty-container p {
      font-size: 1.5rem;
    }

    .content {
      flex-wrap: wrap;
    }

    .content p {
      font-size: 1.25rem;
    }

    .sixty-container {
      width: 82.5%;
    }

    .header-content {
      width: 82.5%;
    }

    .flex-img {
      flex-basis: 100%;
    }

    .flex-text {
      flex-basis: 100%;
      text-align: center;
    }

    .gallery-container {
      width: 100%;
    }

    .four-circles span {
      display: none;
    }
  }

  @media (max-width:600px) {
    .header {
      font-size: 1.5rem;
    }

    .eighty-container {
      width: 98%;
    }

    .eighty-container p {
      font-size: 1rem;
    }

    .content p {
      font-size: 1rem;
    }

    .four-circles {
      max-width: 82.5%
    }
  }
/* Media Queries End */

